<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="145dp"
    android:layout_weight="1"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="3dp">

        <TextView
            android:padding="3dip"
            android:text="@string/calle"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/idCalle"
            android:gravity="left"
            android:padding="3dip"
            android:text="Del Mar"
            android:textColor="@color/colorTextSecondary"/>
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/numero_interior"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/idNumIn"
            android:gravity="left"
            android:padding="3dip"
            android:text=""
            android:textColor="@color/colorTextSecondary"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/numero_exterior"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idNumEx"
            android:gravity="left"
            android:padding="3dip"
            android:text="59"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/colonia"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idColonia"
            android:gravity="left"
            android:padding="3dip"
            android:text="Centro"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/codigo_postal"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idCodPos"
            android:gravity="left"
            android:padding="3dip"
            android:text="63256"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/municipio"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idMunicipio"
            android:gravity="left"
            android:padding="3dip"
            android:text="Guadalajara"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/estado"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idEstado"
            android:gravity="left"
            android:padding="3dip"
            android:text="Jalisco"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/telefono1"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idTel1"
            android:gravity="left"
            android:padding="3dip"
            android:text="3336598545"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/telefono2"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/idTel2"
            android:gravity="left"
            android:padding="3dip"
            android:text="6598545"
            android:textColor="@color/colorTextSecondary" />
    </TableRow>
</TableLayout>